--- a/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
@@ -67,11 +67,11 @@
                                     <constraint firstAttribute="width" constant="20" id="Ejb-hp-YJN"/>
                                     <constraint firstAttribute="height" constant="20" id="pay-Fj-Ots"/>
                                 </constraints>
-                                <color key="tintColor" name="Base White"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
                                     <imageReference key="image" image="xmark" catalog="system" symbolScale="small"/>
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="light"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="medium"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
@@ -114,16 +114,16 @@
         </tableViewCell>
     </objects>
     <designables>
+        <designable name="4Du-xK-9Cz">
+            <size key="intrinsicContentSize" width="26" height="20.666666666666668"/>
+        </designable>
         <designable name="sj1-7I-mkD">
-            <size key="intrinsicContentSize" width="13.666666666666666" height="22"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
         </designable>
     </designables>
     <resources>
         <image name="LinkedIn" width="72" height="72"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
-        <namedColor name="Base White">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
