--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
@@ -247,11 +247,28 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DSX-2l-559" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
+                                <rect key="frame" x="19" y="9" width="337" height="78"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="78" id="A3V-NR-dzB"/>
+                                    <constraint firstAttribute="width" constant="337" id="xa9-qK-dpo"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="DSX-2l-559" secondAttribute="trailing" constant="19" id="8cV-wu-Pwp"/>
                             <constraint firstItem="Cmn-D6-cVd" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="MsH-EI-w7i"/>
+                            <constraint firstAttribute="bottom" secondItem="DSX-2l-559" secondAttribute="bottom" constant="8" id="N9d-Iv-Kup"/>
+                            <constraint firstItem="DSX-2l-559" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="OKD-FR-erN"/>
                             <constraint firstAttribute="trailing" secondItem="Cmn-D6-cVd" secondAttribute="trailing" constant="19" id="Uqh-QD-IBi"/>
+                            <constraint firstItem="DSX-2l-559" firstAttribute="top" secondItem="22m-mJ-RUv" secondAttribute="top" constant="9" id="axx-60-ruC"/>
                             <constraint firstItem="Cmn-D6-cVd" firstAttribute="top" secondItem="22m-mJ-RUv" secondAttribute="top" constant="9" id="eda-OJ-yQo"/>
                             <constraint firstAttribute="bottom" secondItem="Cmn-D6-cVd" secondAttribute="bottom" constant="8" id="tWx-Gv-s6F"/>
                             <constraint firstAttribute="height" constant="95" id="uX0-76-WHs"/>
@@ -269,8 +286,10 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="blurView" destination="DSX-2l-559" id="Glp-QU-4fR"/>
                 <outlet property="educationLbl" destination="0FG-gI-S06" id="vnS-Mi-B4P"/>
                 <outlet property="nameLbl" destination="gAw-H9-ySR" id="du7-RQ-8VY"/>
+                <outlet property="nonBlurView" destination="Cmn-D6-cVd" id="IDq-qT-j5S"/>
                 <outlet property="professionLbl" destination="s8f-h1-ksg" id="H0y-4g-5Fk"/>
                 <outlet property="profilePicIV" destination="rdD-aP-nm5" id="vGw-Qz-cGn"/>
                 <outlet property="starLbl" destination="sDz-s6-jzy" id="g3z-SB-wFI"/>
@@ -315,7 +334,7 @@
             <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="warning">
-            <color red="1" green="0.80784313725490198" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.80800002813339233" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
