--- a/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileHeaderTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileHeaderTVCell.xib
@@ -24,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="154"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWm-hV-jnf" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="90" y="9.9999999999999982" width="195" height="20.333333333333329"/>
+                                <rect key="frame" x="90" y="10" width="195" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="195" id="Bvy-QG-a6c"/>
                                 </constraints>
@@ -43,7 +43,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please setup your profile " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmD-Ff-vUG" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="133" y="31.333333333333336" width="110" height="20.333333333333336"/>
+                                <rect key="frame" x="133" y="44" width="110" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="IG7-0W-BmL"/>
                                 </constraints>
@@ -62,7 +62,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_icon" translatesAutoresizingMaskIntoConstraints="NO" id="r6s-s1-rdI" customClass="RoundedImageView" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="147" y="67.666666666666671" width="80" height="80.000000000000014"/>
+                                <rect key="frame" x="147" y="72" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="YaQ-3S-dCr"/>
                                     <constraint firstAttribute="width" constant="80" id="hN1-1n-j60"/>
@@ -72,15 +72,6 @@
                                         <real key="value" value="40"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6PO-U7-v21">
-                                <rect key="frame" x="216" y="128.66666666666669" width="20" height="20"/>
-                                <color key="tintColor" name="Secondary Grey"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="BVv-sb-rOX"/>
-                                    <constraint firstAttribute="height" constant="14" id="JV3-i5-u5b"/>
-                                </constraints>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="black"/>
                             </imageView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Er-cy-xq2" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
                                 <rect key="frame" x="17" y="8" width="25" height="25"/>
@@ -109,24 +100,37 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CDb-3c-MiE">
+                                <rect key="frame" x="216" y="128" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="JQU-iS-mVj"/>
+                                    <constraint firstAttribute="width" constant="20" id="W3b-iz-LXC"/>
+                                </constraints>
+                                <color key="tintColor" name="Secondary Grey"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="square.and.pencil" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="heavy"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="mWm-hV-jnf" firstAttribute="leading" secondItem="4Er-cy-xq2" secondAttribute="trailing" constant="48" id="4ok-Di-ohK"/>
                             <constraint firstAttribute="height" constant="154" id="6YE-5E-vyS"/>
                             <constraint firstItem="zmD-Ff-vUG" firstAttribute="top" secondItem="mWm-hV-jnf" secondAttribute="bottom" constant="1" id="Apf-39-8IG"/>
-                            <constraint firstAttribute="bottom" secondItem="6PO-U7-v21" secondAttribute="bottom" constant="8" id="LLZ-MQ-fSw"/>
                             <constraint firstItem="4Er-cy-xq2" firstAttribute="top" secondItem="gDo-WP-Eux" secondAttribute="top" constant="8" id="Nb7-9p-wtI"/>
-                            <constraint firstItem="6PO-U7-v21" firstAttribute="leading" secondItem="r6s-s1-rdI" secondAttribute="trailing" constant="-11" id="QVF-YI-Yax"/>
+                            <constraint firstAttribute="trailing" secondItem="CDb-3c-MiE" secondAttribute="trailing" constant="139" id="WeS-Wl-ZAG"/>
                             <constraint firstItem="mWm-hV-jnf" firstAttribute="top" secondItem="gDo-WP-Eux" secondAttribute="top" constant="10" id="aEM-xh-MZu"/>
                             <constraint firstItem="r6s-s1-rdI" firstAttribute="leading" secondItem="gDo-WP-Eux" secondAttribute="leading" constant="147" id="aLh-Er-QDX"/>
                             <constraint firstItem="zmD-Ff-vUG" firstAttribute="leading" secondItem="gDo-WP-Eux" secondAttribute="leading" constant="133" id="ba9-DK-1cG"/>
                             <constraint firstItem="mWm-hV-jnf" firstAttribute="leading" secondItem="gDo-WP-Eux" secondAttribute="leading" constant="90" id="cZJ-ny-RnV"/>
                             <constraint firstItem="r6s-s1-rdI" firstAttribute="top" secondItem="zmD-Ff-vUG" secondAttribute="bottom" constant="16" id="egO-u2-mru"/>
                             <constraint firstAttribute="trailing" secondItem="r6s-s1-rdI" secondAttribute="trailing" constant="148" id="fcz-4w-Bin"/>
+                            <constraint firstAttribute="bottom" secondItem="CDb-3c-MiE" secondAttribute="bottom" constant="6" id="odl-hT-Gst"/>
                             <constraint firstAttribute="trailing" secondItem="mWm-hV-jnf" secondAttribute="trailing" constant="90" id="qm4-gn-Opq"/>
                             <constraint firstItem="4Er-cy-xq2" firstAttribute="leading" secondItem="gDo-WP-Eux" secondAttribute="leading" constant="17" id="xSX-ak-LU4"/>
                             <constraint firstAttribute="trailing" secondItem="zmD-Ff-vUG" secondAttribute="trailing" constant="132" id="xWB-An-dJV"/>
+                            <constraint firstAttribute="bottom" secondItem="r6s-s1-rdI" secondAttribute="bottom" constant="2" id="zD1-WW-UH0"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -140,22 +144,24 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="backBtn" destination="4Er-cy-xq2" id="s3l-Lk-aXV"/>
+                <outlet property="editBtn" destination="CDb-3c-MiE" id="OTu-Bb-TKb"/>
+                <outlet property="profileIV" destination="r6s-s1-rdI" id="PHy-dN-XWh"/>
             </connections>
             <point key="canvasLocation" x="52.671755725190835" y="58.802816901408455"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="4Er-cy-xq2">
-            <size key="intrinsicContentSize" width="19.666666666666668" height="22"/>
+            <size key="intrinsicContentSize" width="19.666666666666668" height="19"/>
         </designable>
         <designable name="mWm-hV-jnf">
-            <size key="intrinsicContentSize" width="83" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="145.66666666666666" height="33"/>
         </designable>
         <designable name="r6s-s1-rdI">
             <size key="intrinsicContentSize" width="512" height="512"/>
         </designable>
         <designable name="zmD-Ff-vUG">
-            <size key="intrinsicContentSize" width="192.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="128" height="12"/>
         </designable>
     </designables>
     <resources>
