--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -657,6 +657,7 @@ this email.</string>
                                             <constraint firstAttribute="width" constant="134" id="Qxa-qH-823"/>
                                             <constraint firstAttribute="height" constant="35" id="mwX-mU-Gzk"/>
                                         </constraints>
+                                        <color key="tintColor" name="Base White"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Forgot Password?"/>
                                         <userDefinedRuntimeAttributes>
@@ -975,6 +976,7 @@ this email.</string>
                         <outlet property="addAccView" destination="Cxs-Rj-zIi" id="cqC-XI-vdz"/>
                         <outlet property="cancelBtnTopConst" destination="C4v-fS-L7i" id="DdE-ON-J24"/>
                         <outlet property="headingLbl" destination="eku-i5-B1A" id="Iga-fX-mSj"/>
+                        <outlet property="mainView" destination="1qG-Fq-dO6" id="sZg-a9-ieY"/>
                         <outlet property="saveBtnTopConst" destination="Ksb-8k-cZW" id="wX7-DG-KUE"/>
                     </connections>
                 </viewController>
@@ -2745,178 +2747,178 @@ this email.</string>
     </scenes>
     <designables>
         <designable name="0ZP-IY-8wV">
-            <size key="intrinsicContentSize" width="70.333333333333329" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="112.33333333333333" height="17"/>
         </designable>
         <designable name="0pz-yD-d4n">
-            <size key="intrinsicContentSize" width="108.66666666666667" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="90.333333333333329" height="16.666666666666668"/>
         </designable>
         <designable name="0t0-UR-Tat">
-            <size key="intrinsicContentSize" width="61.333333333333336" height="20"/>
+            <size key="intrinsicContentSize" width="133.33333333333334" height="35.333333333333336"/>
         </designable>
         <designable name="2WZ-mT-JiU">
-            <size key="intrinsicContentSize" width="889.66666666666663" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="733.33333333333337" height="16.666666666666668"/>
         </designable>
         <designable name="3gP-Q6-AXE">
-            <size key="intrinsicContentSize" width="66" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="107" height="17"/>
         </designable>
         <designable name="43Y-pb-wtz">
-            <size key="intrinsicContentSize" width="146.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="114.66666666666667" height="14.333333333333334"/>
         </designable>
         <designable name="4Sp-6M-OBh">
-            <size key="intrinsicContentSize" width="98.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="68.666666666666671" height="14.333333333333334"/>
         </designable>
         <designable name="5w6-ZN-cHD">
-            <size key="intrinsicContentSize" width="218.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="168" height="15.333333333333334"/>
         </designable>
         <designable name="7es-w6-l3U">
-            <size key="intrinsicContentSize" width="20" height="22"/>
+            <size key="intrinsicContentSize" width="20" height="19"/>
         </designable>
         <designable name="8b6-LU-FPq">
-            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="55.666666666666664" height="17"/>
         </designable>
         <designable name="8kg-pJ-3sY">
-            <size key="intrinsicContentSize" width="39" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="72.666666666666671" height="17"/>
         </designable>
         <designable name="9Lg-cq-Nv0">
-            <size key="intrinsicContentSize" width="148.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="142" height="19"/>
         </designable>
         <designable name="CcO-Ru-ZFl">
-            <size key="intrinsicContentSize" width="62" height="30"/>
+            <size key="intrinsicContentSize" width="71" height="31"/>
         </designable>
         <designable name="CvK-p4-XF2">
-            <size key="intrinsicContentSize" width="34" height="30"/>
+            <size key="intrinsicContentSize" width="35" height="31"/>
         </designable>
         <designable name="D0O-Hf-zFJ">
-            <size key="intrinsicContentSize" width="46.333333333333336" height="12"/>
+            <size key="intrinsicContentSize" width="80.666666666666671" height="16"/>
         </designable>
         <designable name="FdF-zO-SsO">
-            <size key="intrinsicContentSize" width="123" height="30"/>
+            <size key="intrinsicContentSize" width="129" height="31"/>
         </designable>
         <designable name="Fde-X5-2WN">
-            <size key="intrinsicContentSize" width="174.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="170.33333333333334" height="19"/>
         </designable>
         <designable name="Fkw-EZ-gfF">
-            <size key="intrinsicContentSize" width="79.333333333333329" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="127" height="17"/>
         </designable>
         <designable name="Hvi-f8-508">
-            <size key="intrinsicContentSize" width="45" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="47.333333333333336" height="21.333333333333332"/>
         </designable>
         <designable name="IdU-6F-ZgX">
-            <size key="intrinsicContentSize" width="74.333333333333329" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="90" height="23.666666666666668"/>
         </designable>
         <designable name="It5-3m-GYL">
-            <size key="intrinsicContentSize" width="93" height="30"/>
+            <size key="intrinsicContentSize" width="96" height="31"/>
         </designable>
         <designable name="JBx-SY-DoZ">
-            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="55.666666666666664" height="17"/>
         </designable>
         <designable name="JxZ-YY-3L0">
-            <size key="intrinsicContentSize" width="239.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="168.33333333333334" height="14.333333333333334"/>
         </designable>
         <designable name="KaR-Mc-BMB">
-            <size key="intrinsicContentSize" width="34" height="30"/>
+            <size key="intrinsicContentSize" width="35" height="31"/>
         </designable>
         <designable name="L62-5r-p0Y">
-            <size key="intrinsicContentSize" width="165.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="245.66666666666666" height="28.333333333333332"/>
         </designable>
         <designable name="LHQ-gX-34N">
-            <size key="intrinsicContentSize" width="52.666666666666664" height="20"/>
+            <size key="intrinsicContentSize" width="121.33333333333333" height="35.333333333333336"/>
         </designable>
         <designable name="S9Q-It-9Aw">
-            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="173" height="21.333333333333332"/>
         </designable>
         <designable name="SCe-NB-PKY">
-            <size key="intrinsicContentSize" width="147.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="216" height="28.333333333333332"/>
         </designable>
         <designable name="SM8-lU-P1b">
-            <size key="intrinsicContentSize" width="15.666666666666666" height="22"/>
+            <size key="intrinsicContentSize" width="15.666666666666666" height="19"/>
         </designable>
         <designable name="Sux-1S-tdw">
-            <size key="intrinsicContentSize" width="194" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="146" height="15.333333333333334"/>
         </designable>
         <designable name="X59-RV-k6Q">
-            <size key="intrinsicContentSize" width="753.66666666666663" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="625.66666666666663" height="16.666666666666668"/>
         </designable>
         <designable name="ZlU-Hb-i3S">
-            <size key="intrinsicContentSize" width="317.33333333333331" height="81.333333333333329"/>
+            <size key="intrinsicContentSize" width="248.33333333333334" height="61"/>
         </designable>
         <designable name="a6e-P2-qtG">
-            <size key="intrinsicContentSize" width="54" height="30"/>
+            <size key="intrinsicContentSize" width="55" height="31"/>
         </designable>
         <designable name="aRI-Xg-5o1">
-            <size key="intrinsicContentSize" width="87.666666666666671" height="12"/>
+            <size key="intrinsicContentSize" width="136" height="16"/>
         </designable>
         <designable name="af5-1i-EA4">
-            <size key="intrinsicContentSize" width="20" height="22"/>
+            <size key="intrinsicContentSize" width="20" height="19"/>
         </designable>
         <designable name="b3O-xc-bXC">
-            <size key="intrinsicContentSize" width="218.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="168" height="15.333333333333334"/>
         </designable>
         <designable name="bAO-7l-v8h">
-            <size key="intrinsicContentSize" width="20" height="22"/>
+            <size key="intrinsicContentSize" width="20" height="19"/>
         </designable>
         <designable name="bf5-4T-Cpx">
-            <size key="intrinsicContentSize" width="74" height="30"/>
+            <size key="intrinsicContentSize" width="76" height="31"/>
         </designable>
         <designable name="e1r-8r-A1G">
-            <size key="intrinsicContentSize" width="95" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="91.333333333333329" height="19"/>
         </designable>
         <designable name="eku-i5-B1A">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="174" height="16.666666666666668"/>
         </designable>
         <designable name="f47-es-wTH">
-            <size key="intrinsicContentSize" width="172" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="142.66666666666666" height="16.666666666666668"/>
         </designable>
         <designable name="fHp-u4-Vaf">
-            <size key="intrinsicContentSize" width="48" height="30"/>
+            <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="hzv-hu-A8p">
-            <size key="intrinsicContentSize" width="48" height="30"/>
+            <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="iWN-4Z-XWq">
-            <size key="intrinsicContentSize" width="174.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="170.33333333333334" height="19"/>
         </designable>
         <designable name="ixr-0u-dTD">
-            <size key="intrinsicContentSize" width="47" height="30"/>
+            <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="lhD-Tf-j08">
-            <size key="intrinsicContentSize" width="194" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="146" height="15.333333333333334"/>
         </designable>
         <designable name="nIQ-VS-jss">
-            <size key="intrinsicContentSize" width="95" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="91.333333333333329" height="19"/>
         </designable>
         <designable name="pRZ-i9-kuF">
-            <size key="intrinsicContentSize" width="107" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="192.33333333333334" height="33"/>
         </designable>
         <designable name="sDr-88-Fbj">
-            <size key="intrinsicContentSize" width="87.666666666666671" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="136" height="17"/>
         </designable>
         <designable name="sX1-rv-q59">
-            <size key="intrinsicContentSize" width="445.66666666666669" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="367" height="16.666666666666668"/>
         </designable>
         <designable name="uF1-P3-XVr">
-            <size key="intrinsicContentSize" width="62.333333333333336" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="46.333333333333336" height="14.333333333333334"/>
         </designable>
         <designable name="vZc-Ue-Ajr">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="vdO-D0-c2r">
-            <size key="intrinsicContentSize" width="397.66666666666669" height="40.666666666666664"/>
+            <size key="intrinsicContentSize" width="304" height="30.666666666666668"/>
         </designable>
         <designable name="w12-80-ph3">
-            <size key="intrinsicContentSize" width="116.66666666666667" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="111.33333333333333" height="19"/>
         </designable>
         <designable name="whs-bR-EUC">
-            <size key="intrinsicContentSize" width="15.666666666666666" height="22"/>
+            <size key="intrinsicContentSize" width="15.666666666666666" height="19"/>
         </designable>
         <designable name="xbv-4R-o9Y">
             <size key="intrinsicContentSize" width="25.666666666666668" height="25.666666666666668"/>
         </designable>
         <designable name="xnB-yp-Wkb">
-            <size key="intrinsicContentSize" width="46.333333333333336" height="12"/>
+            <size key="intrinsicContentSize" width="80.666666666666671" height="16"/>
         </designable>
         <designable name="y1c-ai-HyS">
-            <size key="intrinsicContentSize" width="30" height="30"/>
+            <size key="intrinsicContentSize" width="30" height="31"/>
         </designable>
     </designables>
     <resources>
