--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItemsTVCell.xib
@@ -248,11 +248,10 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DSX-2l-559" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="19" y="9" width="337" height="78"/>
+                                <rect key="frame" x="19" y="9" width="356" height="78"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="78" id="A3V-NR-dzB"/>
-                                    <constraint firstAttribute="width" constant="337" id="xa9-qK-dpo"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -263,7 +262,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="DSX-2l-559" secondAttribute="trailing" constant="19" id="8cV-wu-Pwp"/>
+                            <constraint firstAttribute="trailing" secondItem="DSX-2l-559" secondAttribute="trailing" id="8cV-wu-Pwp"/>
                             <constraint firstItem="Cmn-D6-cVd" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="MsH-EI-w7i"/>
                             <constraint firstAttribute="bottom" secondItem="DSX-2l-559" secondAttribute="bottom" constant="8" id="N9d-Iv-Kup"/>
                             <constraint firstItem="DSX-2l-559" firstAttribute="leading" secondItem="22m-mJ-RUv" secondAttribute="leading" constant="19" id="OKD-FR-erN"/>
@@ -303,22 +302,22 @@
     </objects>
     <designables>
         <designable name="0FG-gI-S06">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="122.66666666666667" height="12"/>
         </designable>
         <designable name="TnH-JF-VfZ">
-            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="31.666666666666668" height="12"/>
         </designable>
         <designable name="dQH-13-OzP">
-            <size key="intrinsicContentSize" width="99.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="58.333333333333336" height="12"/>
         </designable>
         <designable name="gAw-H9-ySR">
-            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
         </designable>
         <designable name="rdD-aP-nm5">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="s8f-h1-ksg">
-            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="115" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
