--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -196,19 +196,31 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ba0-Xg-o6E" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
                                         <rect key="frame" x="306" y="36" width="35" height="20"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Vbi-XH-pNM">
-                                                <rect key="frame" x="9.6666666666666856" y="2.3333333333333393" width="22" height="21.999999999999996"/>
-                                                <color key="tintColor" name="Primary Yellow"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Icb-FA-TAT" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="35" height="20"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="22.333333333333325" id="L8c-U3-1X1"/>
-                                                    <constraint firstAttribute="width" constant="22" id="U6X-VB-awF"/>
+                                                    <constraint firstAttribute="height" constant="20" id="nhg-iS-BmZ"/>
+                                                    <constraint firstAttribute="width" constant="35" id="o8J-5o-h8J"/>
                                                 </constraints>
-                                            </imageView>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="Block"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="YES"/>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                        <color key="value" name="Danger"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="4"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerX" secondItem="Ba0-Xg-o6E" secondAttribute="centerX" constant="3.1666666666666643" id="DKe-NL-rqb"/>
-                                            <constraint firstItem="Vbi-XH-pNM" firstAttribute="centerY" secondItem="Ba0-Xg-o6E" secondAttribute="centerY" constant="3.8333333333333286" id="RUQ-hl-Nck"/>
+                                            <constraint firstAttribute="bottom" secondItem="Icb-FA-TAT" secondAttribute="bottom" id="GRa-fT-kZ3"/>
+                                            <constraint firstItem="Icb-FA-TAT" firstAttribute="leading" secondItem="Ba0-Xg-o6E" secondAttribute="leading" id="SGY-hI-sLm"/>
+                                            <constraint firstItem="Icb-FA-TAT" firstAttribute="top" secondItem="Ba0-Xg-o6E" secondAttribute="top" id="cdB-ry-Ddu"/>
+                                            <constraint firstAttribute="trailing" secondItem="Icb-FA-TAT" secondAttribute="trailing" id="pji-2I-n6U"/>
                                             <constraint firstAttribute="width" constant="35" id="sOr-Bh-vBM"/>
                                             <constraint firstAttribute="height" constant="20" id="upN-aO-DoG"/>
                                         </constraints>
@@ -440,6 +452,23 @@
                                             <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="m"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfJ-js-cBW" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                        <rect key="frame" x="267" y="58" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="A5a-hx-630"/>
+                                            <constraint firstAttribute="width" constant="20" id="KhG-z4-Gm4"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="3" minY="3" maxX="3" maxY="3"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="tooltip_icon" symbolScale="medium"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -451,9 +480,12 @@
                                     <constraint firstItem="dX8-SZ-fyC" firstAttribute="leading" secondItem="TDA-ZG-dfd" secondAttribute="leading" constant="8" id="TwC-0Z-EdD"/>
                                     <constraint firstAttribute="trailing" secondItem="pXu-df-J1k" secondAttribute="trailing" constant="8" id="YLm-Rx-Tnv"/>
                                     <constraint firstAttribute="trailing" secondItem="sja-AP-Tc4" secondAttribute="trailing" constant="8" id="fS7-ZF-VQh"/>
+                                    <constraint firstAttribute="trailing" secondItem="dfJ-js-cBW" secondAttribute="trailing" constant="72" id="j17-LU-BIU"/>
                                     <constraint firstItem="sja-AP-Tc4" firstAttribute="top" secondItem="TDA-ZG-dfd" secondAttribute="top" constant="8" id="pNa-A7-19j"/>
+                                    <constraint firstItem="dfJ-js-cBW" firstAttribute="top" secondItem="sja-AP-Tc4" secondAttribute="bottom" constant="8" id="rPY-bb-NXU"/>
                                     <constraint firstItem="dX8-SZ-fyC" firstAttribute="top" secondItem="TDA-ZG-dfd" secondAttribute="top" constant="21" id="taP-6G-nEz"/>
                                     <constraint firstItem="A8B-bt-df2" firstAttribute="leading" secondItem="TDA-ZG-dfd" secondAttribute="leading" constant="8" id="vyW-M5-VAW"/>
+                                    <constraint firstAttribute="bottom" secondItem="dfJ-js-cBW" secondAttribute="bottom" constant="14" id="yWy-kr-t02"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -507,6 +539,7 @@
                 <outlet property="swipeTxtLbl" destination="A8B-bt-df2" id="plB-4W-MEu"/>
                 <outlet property="toolTipBtn" destination="dX8-SZ-fyC" id="alY-DK-CNl"/>
                 <outlet property="viewCountsLbl" destination="pXu-df-J1k" id="YjA-1D-4FB"/>
+                <outlet property="viewedToolTipBtn" destination="dfJ-js-cBW" id="Vxc-RC-4Cd"/>
                 <outlet property="viewedprofLbl" destination="v2n-8t-cBj" id="nRw-u1-PXa"/>
                 <outlet property="welcomeHeaderLbl" destination="Cf5-Cq-dE3" id="f8c-8d-sIy"/>
                 <outlet property="welcomePicBtn" destination="Baj-Qv-s2c" id="y2S-2c-Cug"/>
@@ -517,19 +550,19 @@
     </objects>
     <designables>
         <designable name="6BT-Eq-hcD">
-            <size key="intrinsicContentSize" width="73.333333333333329" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="130" height="33"/>
         </designable>
         <designable name="A8B-bt-df2">
-            <size key="intrinsicContentSize" width="337.33333333333331" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="271.66666666666669" height="14.333333333333334"/>
         </designable>
         <designable name="Baj-Qv-s2c">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="Cf5-Cq-dE3">
-            <size key="intrinsicContentSize" width="81" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="148.33333333333334" height="33"/>
         </designable>
         <designable name="HOG-bk-97u">
-            <size key="intrinsicContentSize" width="73" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="53" height="14.333333333333334"/>
         </designable>
         <designable name="bc3-O3-AQ1">
             <size key="intrinsicContentSize" width="407" height="612"/>
@@ -537,20 +570,23 @@
         <designable name="dX8-SZ-fyC">
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
+        <designable name="dfJ-js-cBW">
+            <size key="intrinsicContentSize" width="54" height="54"/>
+        </designable>
         <designable name="dpP-cf-H6r">
-            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="173" height="21.333333333333332"/>
         </designable>
         <designable name="nax-I1-dp4">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="nzF-aI-iJF">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="163.33333333333334" height="14.333333333333334"/>
         </designable>
         <designable name="pXu-df-J1k">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="164" height="14.333333333333334"/>
         </designable>
         <designable name="v2n-8t-cBj">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="237.66666666666666" height="21.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -558,14 +594,10 @@
         <image name="girl" width="407" height="612"/>
         <image name="logo name" width="3289" height="512"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <image name="star.fill" catalog="system" width="128" height="116"/>
         <image name="tooltip_icon" width="48" height="48"/>
         <image name="wifi man grey" width="162" height="152"/>
         <namedColor name="Danger">
             <color red="0.92500001192092896" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Primary Yellow">
-            <color red="1" green="0.72200000286102295" blue="0.27799999713897705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
